--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "link-preview-js": "^3.0.4",
         "libphonenumber-js": "^1.12.6",
         "node-webpmux": "^3.2.0",
+        "node-cache": "^5.1.2",
         "pdfkit": "^0.15.0",
         "pm2": "^5.4.2",
         "audio-decode": "^2.2.2",
